k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pages-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "159.203.156.52.nip.io"
    secretName: "ticontrola-api-tls"
  rules:
    - host: "159.203.156.52.nip.io"
      http:
        paths:
        - path: /
          pathType: Prefix
          # pathType: Exact
          backend:
            service:
              name: ticontrola
              port:
                number: 80
